[metadata]
name = conan-client-remote-s3
author = Kyrylo Shpytsya
author_email = kshpitsa@gmail.com
home_page = https://github.com/kshpytsya/conan-client-remote-s3
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
version = attr: setuptools_scm.get_version
description = Serverless Conan remote storing packages in S3 bucket
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
package_dir =
    =src
install_requires =
    boto3>=1.13.23,<2
    requests-adapter-injector>=0.0.5,<1
    requests-wsgi-adapter>=0.4.1,<1
    werkzeug>=1.0.1,<2
packages = find:
entry_points =
    [requests_adapter_injector.adapter]
    conan-s3:// = conan_client_remote_s3:create

[options.packages.find]
where=src

[mypy]
disallow_untyped_calls=False
disallow_untyped_defs=False
